kubernetes-networks/canary/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: canary
  labels:
    name: canary

---
apiVersion: v1
kind: Namespace
metadata:
  name: live
  labels:
    name: live
