kubernetes-networks/canary/web-deploy-canary.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-canary
  namespace: canary
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-canary
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 100%
      maxSurge: 0
  template:
    metadata:
      labels:
        app: web-canary
    spec:
      containers:
      - name: web-canary
        image: soapj/otus.homework1.kubernetes-intro.web:latest
        livenessProbe:
          tcpSocket:
            port: 8000
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
        volumeMounts:
        - name: app
          mountPath: /app
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "64Mi"
            cpu: "100m"
      volumes:
        - name: app
          emptyDir: {}
