kubernetes-networks/canary/web-svc-canary.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc-canary
  namespace: canary
spec:
  selector:
    app: web-canary
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
