kubernetes-networks/canary/web-svc-live.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc-live
  namespace: live
spec:
  selector:
    app: web-live
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
