kubernetes-networks/canary/web-ingress-canary.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-ingress-canary
  namespace: canary
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "canary"
    nginx.ingress.kubernetes.io/canary-by-header-value: "true"
spec:
  rules:
  - host: canary-test
    http:
      paths:
        - backend:
            serviceName: web-svc-canary
            servicePort: 8000
